--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   nfc_manager: ^3.3.0
   flutter_spinkit: ^5.2.0
   http: ^1.1.0
+  flutter_screenutil: ^5.9.0
+  dots_indicator: ^3.0.0
+  riverpod: ^2.3.10
+  flutter_riverpod: ^2.3.10
+  riverpod_generator: ^2.3.1
+  build_runner: ^2.4.6
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +66,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
