--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_riverpod: ^2.3.10
   riverpod_generator: ^2.3.1
   build_runner: ^2.4.6
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
