--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   riverpod_generator: ^2.3.1
   build_runner: ^2.4.6
   fluttertoast: ^8.2.2
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
