--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   build_runner: ^2.4.6
   fluttertoast: ^8.2.2
   shared_preferences: ^2.2.1
+  provider: ^6.0.5
+  animate_do: ^3.1.2
+  iconly: ^1.0.1
+  sizer: ^2.0.15
+  get: ^4.6.6
+  zoom_tap_animation: ^1.1.0
 
 dev_dependencies:
   flutter_test:
