--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   sizer: ^2.0.15
   get: ^4.6.6
   zoom_tap_animation: ^1.1.0
+  flutter_svg: ^2.0.7
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
