--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   zoom_tap_animation: ^1.1.0
   flutter_svg: ^2.0.7
   google_fonts: ^6.1.0
+  syncfusion_flutter_charts: ^23.1.39
+  carousel_slider: ^4.2.1
+  flutter_chat_ui: ^1.6.9
 
 dev_dependencies:
   flutter_test:
