--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,10 +57,19 @@ dependencies:
   syncfusion_flutter_charts: ^23.1.39
   carousel_slider: ^4.2.1
   flutter_chat_ui: ^1.6.9
+  rename: ^3.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/playstore.png"
+  min_sdk_android: 21
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
